--- a/about.html
+++ b/about.html
@@ -1052,20 +1052,15 @@
             <div class="footer-grid">
                 <div class="footer-section">
                     <h3>Sentinel Peak Advisors</h3>
-                    <p>The anti-agency approach to digital marketing. We deliver results in 48 hours without the overwhelm, contracts, or vanity metrics.</p>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Instagram">IG</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">LI</a>
-                        <a href="#" class="social-link" aria-label="Twitter">TW</a>
-                    </div>
+                    <p>The only social media management service that turns followers into customers. Advanced CRM integration, lead-focused content, and real ROI tracking.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="services.html">48-Hour Websites</a></li>
-                        <li><a href="services.html">Lead Generation</a></li>
-                        <li><a href="services.html">Social Media Strategy</a></li>
-                        <li><a href="services.html">Partnership Guarantee</a></li>
+                        <li><a href="services.html">Social Starter ($697/month)</a></li>
+                        <li><a href="services.html">Lead Generator ($997/month)</a></li>
+                        <li><a href="services.html">Growth Accelerator ($1,497/month)</a></li>
+                        <li><a href="services.html">CRM Integration</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
