--- a/services.html
+++ b/services.html
@@ -1062,19 +1062,14 @@
                 <div class="footer-section">
                     <h3>Sentinel Peak Advisors</h3>
                     <p>The only social media management service that turns followers into customers. Advanced CRM integration, lead-focused content, and real ROI tracking.</p>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Instagram">IG</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">LI</a>
-                        <a href="#" class="social-link" aria-label="Twitter">TW</a>
-                    </div>
                 </div>
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="services.html">Social Media Management</a></li>
+                        <li><a href="services.html">Social Starter - $697</a></li>
+                        <li><a href="services.html">Lead Generator - $997</a></li>
+                        <li><a href="services.html">Growth Accelerator - $1,497</a></li>
                         <li><a href="services.html">CRM Integration</a></li>
-                        <li><a href="services.html">Lead Generation Strategy</a></li>
-                        <li><a href="services.html">ROI Guarantee</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
