--- a/thankyou.html
+++ b/thankyou.html
@@ -804,22 +804,16 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Sentinel Peak Advisors</h3>
-                    <p>Transforming businesses through innovative web design and strategic digital marketing.</p>
-                    <div class="social-links">
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="Twitter">🐦</a>
-                        <a href="#" aria-label="Instagram">📷</a>
-                        <a href="#" aria-label="LinkedIn">💼</a>
-                    </div>
+                    <p>The only social media management service that turns followers into customers. Advanced CRM integration, lead-focused content, and real ROI tracking.</p>
                 </div>
                 
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="services.html">Web Design</a></li>
-                        <li><a href="services.html">Social Media Marketing</a></li>
-                        <li><a href="services.html">Digital Strategy</a></li>
-                        <li><a href="services.html">Brand Development</a></li>
+                        <li><a href="services.html">Social Starter - $697</a></li>
+                        <li><a href="services.html">Lead Generator - $997</a></li>
+                        <li><a href="services.html">Growth Accelerator - $1,497</a></li>
+                        <li><a href="services.html">CRM Integration</a></li>
                     </ul>
                 </div>
                 
