--- a/contact.html
+++ b/contact.html
@@ -772,7 +772,7 @@
     <header>
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="images/logos/sentinel-peak-logo-new.svg" alt="Sentinel Peak Advisors" class="logo-image">
+                <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="logo-image">
                 <span class="logo-text">Sentinel Peak Advisors</span>
             </a>
             <ul class="nav-links">
