--- a/portfolio.html
+++ b/portfolio.html
@@ -869,7 +869,7 @@
     <!-- NAVIGATION BAR -->
     <div class="nav-wrapper" id="navbar">
         <nav class="navbar container">
-            <a href="index.html" class="logo"><img src="images/logos/sentinel-peak-logo-new.svg" alt="Sentinel Peak Advisors" class="logo-image"><span class="logo-text">Sentinel Peak Advisors</span></a>
+            <a href="index.html" class="logo"><img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="logo-image"><span class="logo-text">Sentinel Peak Advisors</span></a>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link">Services</a></li>
