--- a/services.html
+++ b/services.html
@@ -861,7 +861,7 @@
     <div class="nav-wrapper" id="navbar">
         <nav class="navbar container">
             <a href="index.html" class="logo">
-                <img src="images/logos/sentinel-peak-logo-new.svg" alt="Sentinel Peak Advisors" class="logo-image">
+                <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="logo-image">
                 <span class="logo-text">Sentinel Peak Advisors</span>
             </a>
             <ul class="nav-menu">
