--- a/contact.html
+++ b/contact.html
@@ -813,7 +813,7 @@
                     <h2 class="form-title">Turn Your Social Media Into a Lead Machine</h2>
                     <p class="form-subtitle">No long contracts. No vanity metrics. No social media overwhelm. Just qualified leads and real ROI. We'll contact you within 2 hours to discuss your social media strategy and provide a transparent quote.</p>
                     
-                    <form id="contact-form" action="https://formspree.io/f/info@sentinelpeaksolutions.com" method="POST">
+                    <form id="contact-form" action="https://formspree.io/f/xldnoqwv" method="POST">
                         <!-- Hidden honeypot field for spam protection -->
                         <div style="display: none;">
                             <label>Don't fill this out if you're human: <input name="bot-field" /></label>
