--- a/thankyou.html
+++ b/thankyou.html
@@ -183,9 +183,13 @@
         }
 
         .logo-image {
-            height: 40px;
+            height: 56px;
             width: auto;
             transition: all var(--transition-medium);
+        }
+        
+        .logo:hover .logo-image {
+            transform: scale(1.05);
         }
 
         .logo-text {
@@ -198,7 +202,7 @@
                 display: none;
             }
             .logo-image {
-                height: 36px;
+                height: 48px;
             }
         }
 
