--- a/about.html
+++ b/about.html
@@ -247,9 +247,13 @@
         }
 
         .logo-image {
-            height: 40px;
+            height: 56px;
             width: auto;
             transition: all var(--transition-medium);
+        }
+        
+        .logo:hover .logo-image {
+            transform: scale(1.05);
         }
 
         .logo-text {
@@ -262,7 +266,7 @@
                 display: none;
             }
             .logo-image {
-                height: 36px;
+                height: 48px;
             }
         }
 
