--- a/portfolio.html
+++ b/portfolio.html
@@ -257,9 +257,13 @@
         }
 
         .logo-image {
-            height: 40px;
+            height: 56px;
             width: auto;
             transition: all var(--transition-medium);
+        }
+        
+        .logo:hover .logo-image {
+            transform: scale(1.05);
         }
 
         .logo-text {
@@ -272,7 +276,7 @@
                 display: none;
             }
             .logo-image {
-                height: 36px;
+                height: 48px;
             }
         }
 
