--- a/about.html
+++ b/about.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyeMZs.woff2" as="font" type="font/woff2" crossorigin>
+    
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/sentinel-peak-logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/sentinel-peak-logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/sentinel-peak-logo.png">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#000000">
     <style>
         /* === CSS CUSTOM PROPERTIES === */
         :root {
@@ -247,13 +254,9 @@
         }
 
         .logo-image {
-            height: 56px;
+            height: 40px;
             width: auto;
             transition: all var(--transition-medium);
-        }
-        
-        .logo:hover .logo-image {
-            transform: scale(1.05);
         }
 
         .logo-text {
@@ -266,7 +269,7 @@
                 display: none;
             }
             .logo-image {
-                height: 48px;
+                height: 36px;
             }
         }
 
