--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Sentinel Peak Advisors | Our Story & Team</title>
-    <meta name="description" content="Learn about Sentinel Peak Advisors - experienced digital strategists and designers helping businesses reach new heights through exceptional digital experiences since 2019.">
+    <title>About - Sentinel Peak Advisors | No More Marketing Horror Stories</title>
+    <meta name="description" content="We understand what it's like to get burned by marketing companies. That's why we built an anti-agency approach: 1-day websites, no contracts, guaranteed results.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -874,7 +874,7 @@
         <div class="container">
             <div class="page-header-content fade-in">
                 <h1>We're Business Owners' Advocates</h1>
-                <p>We understand what it's like to be burned by agencies. That's why we built an anti-agency approach that puts your success first.</p>
+                <p>We understand what it's like to get burned by marketing companies. That's why we built an anti-agency approach: 1-day websites, no contracts, guaranteed results.</p>
             </div>
         </div>
     </section>
@@ -885,8 +885,8 @@
             <div class="story-content">
                 <div class="story-text slide-up">
                     <h2>Why We Exist</h2>
-                    <p>We've seen too many business owners get burned by agencies that overpromise, underdeliver, and disappear with their money. <span class="story-highlight">We're different because we understand your pain.</span></p>
-                    <p>Our founder experienced the same frustrations: long contracts, vanity metrics instead of real results, and agencies that treated his business like just another number. That's when we decided to build something better.</p>
+                    <p>We've seen too many business owners get burned by marketing companies that overpromise, underdeliver, and disappear with their money. <span class="story-highlight">We're different because we understand your pain.</span></p>
+                    <p>Our founder experienced the same frustrations: long contracts, vanity metrics instead of real results, and marketing companies that treated his business like just another number. That's when we decided to build something better.</p>
                     <p>Today, we deliver what other agencies promise but can't deliver: <strong>real results in 48 hours, transparent pricing, and no long-term contracts.</strong> We only succeed when you succeed.</p>
                     <p>We believe business owners deserve partners, not vendors. That's why we guarantee our work and focus on what actually matters: growing your revenue.</p>
                 </div>
@@ -902,8 +902,8 @@
         <div class="container">
             <div class="section-header">
                 <div class="section-badge slide-up">What We DON'T Do</div>
-                <h2 class="section-title slide-up stagger-1">Why We're Different from Every Other Agency</h2>
-                <p class="section-subtitle slide-up stagger-2">We break every rule that makes business owners hate agencies. Here's our promise to you.</p>
+                <h2 class="section-title slide-up stagger-1">Why We're Different from Every Other Marketing Company</h2>
+                <p class="section-subtitle slide-up stagger-2">We break every rule that makes business owners hate marketing companies. Here's our promise to you.</p>
             </div>
             
             <div class="values-grid">
@@ -952,7 +952,7 @@
             <div class="section-header">
                 <div class="section-badge slide-up">Our Guarantee</div>
                 <h2 class="section-title slide-up stagger-1">We Put Our Money Where Our Mouth Is</h2>
-                <p class="section-subtitle slide-up stagger-2">Unlike other agencies, we guarantee our work with real consequences if we don't deliver</p>
+                <p class="section-subtitle slide-up stagger-2">Unlike other marketing companies, we guarantee our work with real consequences if we don't deliver</p>
             </div>
             
             <div class="team-grid">
