--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - Sentinel Peak Advisors | Web Design & Digital Marketing</title>
-    <meta name="description" content="Professional web design, digital marketing, and brand development services. Custom websites, SEO optimization, social media marketing, and digital strategy consulting.">
+    <title>Services - Sentinel Peak Advisors | 1-Day Websites + Social Media Marketing</title>
+    <meta name="description" content="Get your professional website in 1 day plus social media marketing that actually generates leads. No more getting burned by marketing companies that disappear or don't deliver results.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -885,8 +885,8 @@
     <section class="page-header">
         <div class="container">
             <div class="page-header-content fade-in">
-                <h1>The Only Social Media Management That Actually Generates Leads</h1>
-                <p>While others focus on vanity metrics, we integrate advanced CRM technology to turn your social media presence into a lead-generating machine. Real prospects, real revenue, real results.</p>
+                <h1>Get Your Website in 1 Day + Social Media Marketing That Actually Generates Leads</h1>
+                <p>No more getting burned by marketing companies that disappear or focus on vanity metrics. Get a professional website delivered in 1 day, plus ongoing social media marketing that actually brings in customers and revenue.</p>
             </div>
         </div>
     </section>
@@ -899,19 +899,19 @@
                     <div class="service-header">
                         <span class="service-icon-large">01</span>
                         <div>
-                            <h3>Social Starter</h3>
+                            <h3>24-Hour Launch + Lead Generator</h3>
                             <div class="service-price">$697/month (no contracts)</div>
                         </div>
                     </div>
-                    <p class="service-description">Perfect for businesses ready to turn their social media into a lead generation tool. We manage your content and integrate advanced CRM technology to capture and track every prospect interaction.</p>
+                    <p class="service-description">Perfect for businesses that need a professional website fast plus social media that actually works. Get your website delivered in 1 day, then we manage your social media to generate real leads, not just likes.</p>
                     <ul class="service-features">
+                        <li>Professional website delivered in 1 day</li>
                         <li>2 social media platforms (Facebook + Instagram or LinkedIn)</li>
                         <li>12 lead-focused posts per month</li>
-                        <li>Advanced CRM integration for lead tracking</li>
+                        <li>Website + social media lead tracking</li>
                         <li>Comment and DM response management</li>
-                        <li>Monthly lead generation reports (not vanity metrics)</li>
-                        <li>Basic automation setup</li>
-                        <li>90-day ROI guarantee</li>
+                        <li>Monthly lead reports (not vanity metrics)</li>
+                        <li>90-day results commitment</li>
                     </ul>
                     <a href="contact.html" class="service-link">Get Started →</a>
                 </div>
@@ -920,18 +920,18 @@
                     <div class="service-header">
                         <span class="service-icon-large">02</span>
                         <div>
-                            <h3>Lead Generator</h3>
+                            <h3>Express Website + Growth Accelerator</h3>
                             <div class="service-price">$997/month (most popular)</div>
                         </div>
                     </div>
-                    <p class="service-description">Our most popular package for businesses serious about growth. Complete social media management with advanced lead generation, CRM automation, and dedicated account management. Real leads, real revenue.</p>
+                    <p class="service-description">Our most popular package for businesses serious about growth. Professional website in 1 day plus complete social media marketing that actually generates leads. Unlike marketing companies that disappear, we deliver results you can measure.</p>
                     <ul class="service-features">
+                        <li>Professional website delivered in 1 day</li>
                         <li>3 social media platforms (Facebook, Instagram, LinkedIn)</li>
                         <li>20 lead-focused posts per month</li>
-                        <li>Advanced CRM automation and lead scoring</li>
+                        <li>Advanced lead tracking and scoring</li>
                         <li>Complete engagement management (comments, DMs, reviews)</li>
                         <li>Weekly lead generation and ROI reports</li>
-                        <li>Custom landing pages for lead capture</li>
                         <li>Dedicated account manager and monthly strategy calls</li>
                     </ul>
                     <a href="contact.html" class="service-link">Get Started →</a>
@@ -941,15 +941,15 @@
                     <div class="service-header">
                         <span class="service-icon-large">03</span>
                         <div>
-                            <h3>Growth Accelerator</h3>
+                            <h3>Instant Impact + Market Dominator</h3>
                             <div class="service-price">$1,497/month (full-service)</div>
                         </div>
                     </div>
-                    <p class="service-description">For businesses ready to dominate their market. Complete social media management with advanced automation, multi-channel lead generation, and revenue optimization. Maximum growth, maximum results.</p>
+                    <p class="service-description">For businesses ready to dominate their market. Professional website in 1 day plus complete marketing solution with advanced automation and multi-channel lead generation. Maximum growth, maximum results - delivered reliably.</p>
                     <ul class="service-features">
+                        <li>Professional website delivered in 1 day</li>
                         <li>All social platforms + Google My Business optimization</li>
                         <li>30 lead-focused posts per month + video content</li>
-                        <li>Advanced marketing automation and lead nurturing</li>
                         <li>Multi-channel lead capture (social, email, SMS, reviews)</li>
                         <li>Real-time lead notification and scoring</li>
                         <li>Custom sales funnels and conversion optimization</li>
@@ -962,18 +962,18 @@
                     <div class="service-header">
                         <span class="service-icon-large">04</span>
                         <div>
-                            <h3>Lead Generation Guarantee</h3>
-                            <div class="service-price">Risk-free partnership</div>
+                            <h3>Marketing Partnership You Can Trust</h3>
+                            <div class="service-price">Performance-focused collaboration</div>
                         </div>
                     </div>
-                    <p class="service-description">We're so confident your social media will generate leads that we guarantee it. No long-term contracts, complete transparency, and a 90-day money-back guarantee if you don't see measurable lead generation.</p>
+                    <p class="service-description">We're so confident in our website and marketing services that we're dedicated to delivering results. Unlike marketing companies that disappear or don't deliver, we offer complete transparency, no long contracts, and a 90-day performance focus with transparent reporting.</p>
                     <ul class="service-features">
+                        <li>No marketing companies that disappear mid-project</li>
                         <li>No long-term contracts (month-to-month)</li>
-                        <li>90-day lead generation guarantee</li>
+                        <li>90-day results commitment</li>
                         <li>Complete price transparency (no hidden fees)</li>
                         <li>You own all accounts and data</li>
-                        <li>Weekly lead generation reports</li>
-                        <li>Dedicated account manager</li>
+                        <li>Clear communication and weekly reports</li>
                         <li>Cancel anytime (no penalties)</li>
                     </ul>
                     <a href="contact.html" class="service-link">Get Started →</a>
@@ -988,39 +988,39 @@
             <div class="section-header">
                 <div class="section-badge slide-up">Simple, Transparent Pricing</div>
                 <h2 class="section-title slide-up stagger-1">No Hidden Fees, No Long Contracts, Real Results</h2>
-                <p class="section-subtitle slide-up stagger-2">While other social media agencies focus on vanity metrics, we offer month-to-month partnerships with guaranteed lead generation.</p>
+                <p class="section-subtitle slide-up stagger-2">While other marketing companies focus on vanity metrics or disappear mid-project, we offer month-to-month partnerships with measurable results you can track.</p>
             </div>
             
             <div class="pricing-grid">
                 <div class="pricing-card scale-in">
                     <div class="pricing-header">
-                        <h3>Social Starter</h3>
+                        <h3>24-Hour Launch + Lead Generator</h3>
                         <div class="price">$697</div>
                         <div class="price-period">per month (no contracts)</div>
                     </div>
                     <ul class="pricing-features">
+                        <li>Professional website in 1 day</li>
                         <li>2 social media platforms</li>
                         <li>12 lead-focused posts/month</li>
-                        <li>CRM integration & lead tracking</li>
-                        <li>Engagement management</li>
+                        <li>Website + social lead tracking</li>
                         <li>Monthly lead reports</li>
-                        <li>90-day ROI guarantee</li>
+                        <li>90-day results commitment</li>
                     </ul>
                     <a href="contact.html" class="btn btn-primary">Get Started</a>
                 </div>
 
                 <div class="pricing-card featured scale-in stagger-1">
                     <div class="pricing-header">
-                        <h3>Lead Generator</h3>
+                        <h3>Express Website + Growth Accelerator</h3>
                         <div class="price">$997</div>
                         <div class="price-period">per month (most popular)</div>
                     </div>
                     <ul class="pricing-features">
+                        <li>Professional website in 1 day</li>
                         <li>3 social media platforms</li>
                         <li>20 lead-focused posts/month</li>
-                        <li>Advanced CRM automation</li>
+                        <li>Advanced lead tracking automation</li>
                         <li>Complete engagement management</li>
-                        <li>Custom landing pages</li>
                         <li>Weekly reports & strategy calls</li>
                         <li>Dedicated account manager</li>
                     </ul>
@@ -1029,14 +1029,14 @@
 
                 <div class="pricing-card scale-in stagger-2">
                     <div class="pricing-header">
-                        <h3>Growth Accelerator</h3>
+                        <h3>Instant Impact + Market Dominator</h3>
                         <div class="price">$1,497</div>
                         <div class="price-period">per month (full-service)</div>
                     </div>
                     <ul class="pricing-features">
+                        <li>Professional website in 1 day</li>
                         <li>All platforms + Google My Business</li>
                         <li>30 posts/month + video content</li>
-                        <li>Advanced marketing automation</li>
                         <li>Multi-channel lead capture</li>
                         <li>Custom sales funnels</li>
                         <li>Weekly strategy calls</li>
@@ -1052,8 +1052,8 @@
     <section class="cta-section">
         <div class="container">
             <div class="cta-content fade-in">
-                <h2 class="cta-title">Ready to turn your social media into a lead-generating machine?</h2>
-                <p class="cta-description">Limited capacity: We only take 5 new social media clients per month. Book your free lead generation strategy session before spots fill up.</p>
+                <h2 class="cta-title">Ready to get your website launched and start generating leads immediately?</h2>
+                <p class="cta-description">Limited capacity: We only take 5 new clients per month for website + marketing services. Get your website in 1 day and start generating leads immediately. Book your free strategy session before spots fill up.</p>
                 <div class="hero-buttons">
                     <a href="contact.html" class="btn btn-primary">Book Free Strategy Session</a>
                     <a href="tel:650-586-5889" class="btn btn-secondary">Call: (650) 586-5889</a>
@@ -1068,7 +1068,7 @@
             <div class="footer-grid">
                 <div class="footer-section">
                     <h3>Sentinel Peak Advisors</h3>
-                    <p>The only social media management service that turns followers into customers. Advanced CRM integration, lead-focused content, and real ROI tracking.</p>
+                    <p>Professional websites delivered in 1 day + social media marketing that actually generates leads. No more getting burned by marketing companies that disappear or don't deliver.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Services</h3>
