--- a/about.html
+++ b/about.html
@@ -1074,19 +1074,16 @@
                 </a>
                 <span class="company-name">Sentinel Peak Advisors</span>
             </div>
-            <ul class="nav-menu">
-                <div class="mobile-menu-header">
-                    <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="mobile-menu-logo">
-                    <h2 class="mobile-menu-title">Sentinel Peak Advisors</h2>
-                </div>
-                <div class="mobile-menu-nav">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="services.html" class="nav-link">Services</a></li>
-                    <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-                    <li><a href="about.html" class="nav-link active">About</a></li>
-                    <li><a href="contact.html" class="nav-link">Contact</a></li>
-                </div>
+            <!-- Desktop Navigation -->
+            <ul class="nav-menu desktop-nav">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="services.html" class="nav-link">Services</a></li>
+                <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+                <li><a href="about.html" class="nav-link active">About</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
+            
+            <!-- Mobile Menu Button -->
             <button class="mobile-menu-btn" aria-label="Toggle mobile menu">
                 <div class="hamburger">
                     <span></span>
@@ -1094,6 +1091,21 @@
                     <span></span>
                 </div>
             </button>
+        </nav>
+    </div>
+    
+    <!-- Mobile Menu Overlay (Separate from desktop nav) -->
+    <div class="mobile-menu-overlay">
+        <div class="mobile-menu-header">
+            <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="mobile-menu-logo">
+            <h2 class="mobile-menu-title">Sentinel Peak Advisors</h2>
+        </div>
+        <nav class="mobile-menu-nav">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="services.html" class="nav-link">Services</a>
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link active">About</a>
+            <a href="contact.html" class="nav-link">Contact</a>
         </nav>
     </div>
 
