--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Sentinel Peak Advisors | Technical Expertise Meets Business Automation</title>
-    <meta name="description" content="From critical infrastructure engineer to business automation expert. Learn how deep technical expertise helps businesses stop losing $50,000+ annually to operational inefficiencies.">
+    <title>About - Sentinel Peak Solutions | Digital Solutions for Local Businesses</title>
+    <meta name="description" content="From critical infrastructure engineering to local business digital solutions. Learn how technical expertise helps businesses modernize their websites, social media, and customer management.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -47,7 +47,9 @@
             --grid-margin: clamp(1rem, 5vw, 3rem);
             
             /* Colors */
-            --color-bg: #000000;
+            --color-bg: #0c0c0c;
+            --color-primary: #44c3c3;
+            --color-accent: #00f7a5;
             --color-text: #ffffff;
             --color-text-muted: rgba(255, 255, 255, 0.6);
             --color-border: rgba(255, 255, 255, 0.1);
@@ -1163,9 +1165,9 @@
         <nav class="navbar container">
             <div class="brand-container">
                 <a href="index.html" class="logo">
-                    <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="logo-image">
+                    <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Solutions" class="logo-image">
                 </a>
-                <span class="company-name">Sentinel Peak Advisors</span>
+                <span class="company-name">Sentinel Peak Solutions</span>
             </div>
             <!-- Desktop Navigation -->
             <ul class="nav-menu desktop-nav">
@@ -1393,7 +1395,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-section">
-                    <h3>Sentinel Peak Advisors</h3>
+                    <h3>Sentinel Peak Solutions</h3>
                     <p>Complete business automation platform providing dedicated staff for customer service, marketing, operations, and content creation. Stop losing money to daily business problems and get your professional team working 24/7.</p>
                 </div>
                 <div class="footer-section">
@@ -1422,7 +1424,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Sentinel Peak Advisors. All rights reserved.</p>
+                <p>&copy; 2024 Sentinel Peak Solutions. All rights reserved.</p>
             </div>
         </div>
     </footer>
