--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Sentinel Peak Advisors | Real Results: 1-Day Websites + Lead Generation</title>
+    <title>Portfolio - Sentinel Peak Solutions | Real Results: Branded Websites + Digital Solutions</title>
     <meta name="description" content="See real results from our exclusive business growth programs and 24-hour websites. Client success stories, case studies, and proof that our premium approach works.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,9 @@
             --grid-margin: clamp(1rem, 5vw, 3rem);
             
             /* Colors */
-            --color-bg: #000000;
+            --color-bg: #0c0c0c;
+            --color-primary: #44c3c3;
+            --color-accent: #00f7a5;
             --color-text: #ffffff;
             --color-text-muted: rgba(255, 255, 255, 0.6);
             --color-border: rgba(255, 255, 255, 0.1);
@@ -1435,9 +1437,9 @@
         <nav class="navbar container">
             <div class="brand-container">
                 <a href="index.html" class="logo">
-                    <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Advisors" class="logo-image">
+                    <img src="images/sentinel-peak-logo.png" alt="Sentinel Peak Solutions" class="logo-image">
                 </a>
-                <span class="company-name">Sentinel Peak Advisors</span>
+                <span class="company-name">Sentinel Peak Solutions</span>
             </div>
             <!-- Desktop Navigation -->
             <ul class="nav-menu desktop-nav">
@@ -1821,7 +1823,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-section">
-                    <h3>Sentinel Peak Advisors</h3>
+                    <h3>Sentinel Peak Solutions</h3>
                     <p>Professional websites delivered in 1 day + social media marketing that actually generates leads. No more getting burned by marketing companies that disappear or don't deliver.</p>
                 </div>
                 <div class="footer-section">
@@ -1850,7 +1852,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Sentinel Peak Advisors. All rights reserved.</p>
+                <p>&copy; 2024 Sentinel Peak Solutions. All rights reserved.</p>
             </div>
         </div>
     </footer>
