--- a/services.html
+++ b/services.html
@@ -1611,8 +1611,8 @@
                 <div class="footer-section">
                     <h3>Contact Info</h3>
                     <p>📧 info@sentinelpeaksolutions.com</p>
-                    <p>📞 (423) 855-5055</p>
-                    <p>📍 Tennessee</p>
+                    <p>📞 (650) 586-5889</p>
+                    <p>📍 Fresno</p>
                 </div>
             </div>
             <div class="footer-bottom">
